# loglensx

./: .gitignore  CHANGELOG.md  DELIVERABLES.md  LICENSE  MANIFEST.in  PROJECT_SUMMARY.md  PUBLICATION_CHECKLIST.md  PUBLISHING.md  QUICKSTART.md  README.md  logger.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  validate_for_pypi.py
examples/: fastapi_example.py  flask_example.py  standalone_example.py
exports/: errors.csv  errors.ndjson
loglens/core/: analyzer.py  parser.py
loglens/visualizers/: tables.py
loglensx/: __init__.py  cli.py
loglensx/core/: __init__.py  analyzer.py  exporter.py  parser.py
loglensx/integrations/: __init__.py  _dashboard.py  fastapi_integration.py  flask_integration.py
loglensx/visualizers/: __init__.py  charts.py  tables.py
tests/: test_loglens.py  test_loglensx.py
