[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "loglens"
version = "1.0.0"
description = "Interactive log viewer with charts and visualizations for FastAPI and Flask"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "LogLens Contributors", email = "support@loglens.dev"}
]
keywords = [
    "logging",
    "log viewer",
    "visualization",
    "fastapi",
    "flask",
    "charts",
    "analytics",
    "monitoring"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: System :: Logging",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = [
    "plotly>=5.0.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.68.0", "uvicorn[standard]>=0.15.0"]
flask = ["flask>=2.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "twine>=3.7.0",
]

[project.scripts]
loglens = "loglens.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/loglens"
Documentation = "https://loglens.readthedocs.io"
Repository = "https://github.com/yourusername/loglens.git"
"Bug Tracker" = "https://github.com/yourusername/loglens/issues"

[tool.setuptools]
packages = ["loglens", "loglens.core", "loglens.integrations", "loglens.visualizers"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=loglens --cov-report=html --cov-report=term-missing"
